--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "uploadthing": "^7.7.3",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "@netlify/kv": "^0.2.0",
+    "@netlify/kv": "^0.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
