--- a/package.json
+++ b/package.json
@@ -72,8 +72,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.3",
     "vaul": "^0.9.3",
-    "zod": "^3.23.8",
-    "@netlify/kv": "^0.2.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
